medium 보고 따라해라