@@ -1,47 +1,33 @@
 package com.practice.model;
 
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.Date;
+import java.util.Collection;
+import java.util.List;
+
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
-import lombok.Data;
-import lombok.RequiredArgsConstructor;
-
-import java.util.Arrays;
-import java.util.Collection;
-
 @Data
-@RequiredArgsConstructor
+@NoArgsConstructor
 public class User implements UserDetails {
-
-    @Size(min = 4, message = "this property(id)'s size must be at least 4")
-    private String id;
-
-    @Size(min = 6, message = "this property(password)'s size must be at least 6")
+    private Integer id;
+    private String fullName;
+    private String email;
     private String password;
-
-    @NotNull
-    private String username;
-
-    @NotNull
-    private int age;
-
-    @NotNull
-    private String refreshToken;
-
-    public void updateRefreshToken(String newRefreshToken) {
-        this.refreshToken = newRefreshToken;
-    }
-
-    public void destroyRefreshToken() {
-        this.refreshToken = null;
-    }
+    private Date createdAt;
+    private Date updatedAt;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
+        return List.of();
+    }
+
+    @Override
+    public String getUsername() {
+        return email;
     }
 
     @Override
